More comments, border boxed the whole thing and fixed search box button overflow issue

--- a/styles/less/_sidebar.less
+++ b/styles/less/_sidebar.less
@@ -12,7 +12,6 @@
 	.instagram_thumb {
 		width: 20%;
 		float: left;
-		/*-webkit-transition-duration: .20s;*/
 		-webkit-transition-duration: 0.2s;
 		-webkit-transition-property: all;
 		outline: 0px solid #fff;
@@ -36,10 +35,6 @@
 	.search_box {
 		position: relative;
 		input {
-			-webkit-box-sizing: border-box;
-			-moz-box-sizing: border-box;
-			box-sizing: border-box;
-		
 			width: 100%;
 			padding: 5px 60px 5px 0;
 			border: 1px solid darken(@borderColor, 20);
@@ -50,10 +45,12 @@
 			line-height: 18px;
 			-webkit-appearance: none;
 			margin-top: 0;
+			margin-bottom: 0;
 		}
 		button {
 			position: absolute;
 			top: 0px;
+			bottom: 0;
 			right: 0;
 			font-size: 10px;
 			color: #fff;
