--- a/styles/less/less.less
+++ b/styles/less/less.less
@@ -19,6 +19,11 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 /*****
 	LAYOUT
 *****/
+* {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
 body {
     background: #fff;
     color: #000;
@@ -28,7 +33,7 @@ body {
     box-shadow: 0px 0px 30px #555;
 }
 .wrapper {
-    max-width: 1050px;
+    max-width: 1150px;
     margin: 0 auto;
     padding: 5%;
 }
